--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-node_modules
-node_modules
+# Ignore node_modules
+node_modules/
+
+# Ignore cache directories
+.cache/
+.eslintcache
+
+# Ignore build outputs
+build/
+dist/
+
+# Ignore environment variables
+.env
+
+# Ignore OS-specific files
+.DS_Store
+Thumbs.db
